package model

import (
	"errors"
	"time"
)

// PR status constants.
const (
	// StatusOPEN represents an open pull request.
	StatusOPEN = "OPEN"
	// StatusMERGED represents a merged pull request.
	StatusMERGED = "MERGED"
)

// MaxReviewersPerPR is the maximum number of reviewers allowed per pull request.
const MaxReviewersPerPR = 2

// ValidateStatus validates that the status is one of the allowed values.
func ValidateStatus(status string) error {
	if status != StatusOPEN && status != StatusMERGED {
		return errors.New("invalid status: must be OPEN or MERGED")
	}
	return nil
}

// PullRequest represents a pull request entity in the system.
// Matches the pull_requests table schema.
type PullRequest struct {
	PullRequestID   string     `gorm:"primaryKey;column:pull_request_id;type:varchar(255)"                           json:"pull_request_id"`
	PullRequestName string     `gorm:"column:pull_request_name;type:varchar(255);not null"                           json:"pull_request_name"`
	AuthorID        string     `gorm:"column:author_id;type:varchar(255);not null;index:idx_pull_requests_author_id" json:"author_id"`
	Status          string     `gorm:"column:status;type:pr_status_enum;not null;index:idx_pull_requests_status"     json:"status"`
	CreatedAt       time.Time  `gorm:"column:created_at;type:timestamptz;not null;default:now()"                     json:"createdAt"`
	MergedAt        *time.Time `gorm:"column:merged_at;type:timestamptz"                                             json:"mergedAt,omitempty"`
}

// TableName specifies the table name for GORM.
func (PullRequest) TableName() string {
	return "pull_requests"
}

// PullRequestReviewer represents a reviewer assignment for a pull request.
// Matches the pull_request_reviewers table schema.
type PullRequestReviewer struct {
	ID            int64     `gorm:"primaryKey;column:id;type:bigserial"                                                   json:"id"`
	PullRequestID string    `gorm:"column:pull_request_id;type:varchar(255);not null;index:idx_reviewers_pull_request_id" json:"pull_request_id"`
	UserID        string    `gorm:"column:user_id;type:varchar(255);not null;index:idx_reviewers_user_id"                 json:"user_id"`
	AssignedAt    time.Time `gorm:"column:assigned_at;type:timestamptz;not null;default:now()"                            json:"assigned_at"`
}

// TableName specifies the table name for GORM.
func (PullRequestReviewer) TableName() string {
	return "pull_request_reviewers"
}
